k8s-test/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    -
      http:
        paths:
          -
            path: /
            backend:
              serviceName: folder-service-frontend-cluster-ip-service
              servicePort: 3001
          -
            path: /api/folders
            backend:
              serviceName: folder-service-backend-cluster-ip-service
              servicePort: 3000
